# fleetmanager

./: .gitignore  Cargo.toml  README.md  justfile  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/: OLD.eslintrc.cjs  abb_irb52_7_120.gltf  cardboard_box_01_4k.gltf  index.html  package.json  postcss.config.js  tsconfig.node.json  vite.config.ts
frontend/assets/: index.html
frontend/assets/favicon/: site.webmanifest
frontend/assets/gltf/: abb_irb52_7_120.glb
frontend/assets/gltf copy/: cardboard_box_01_4k.gltf
frontend/src/: App.tsx  doctype.ts  index.css  main.tsx  theme.ts
frontend/src/@types/: context.d.ts  location.d.ts  robot.d.ts  task.d.ts
frontend/src/components/: BoxMesh.tsx  ConnectionStatus.tsx  FMWidget.tsx  FMWidgetAuto.tsx  FMWidgetError.tsx  FMWidgetManual.tsx  FMWidgetOff.tsx  Fleetmanager.tsx  FleetmanagerWidget.tsx  GuiSelection.tsx  LocationForm.tsx  LocationItem.tsx  LocationList.tsx  LocationListContext.tsx  LocationListItem.tsx  LocationListQuery.tsx  LocationTable.tsx  LocationTableItem.tsx  MoveStuffTest.tsx  MyRotatingBox.tsx  Nav.tsx  RobotForm.tsx  RobotItem.tsx  RobotList.tsx  RobotListContext.tsx  RobotListItem.tsx  RobotListQuery.tsx  RobotMesh.tsx  RobotSelection.tsx  RobotTable.tsx  RobotTableItem.tsx  Selection.tsx  TaskForm.tsx  TaskItem.tsx  (+8 more)
reducer/: Cargo.toml
reducer/src/: lib.rs
robotrs/: Cargo.toml  README.md
robotrs/src/: lib.rs  main.rs
robotrs/src/utils/: mod.rs
src/@types/: robot.d.ts
src/components/: Checkbox.tsx  Robot.tsx  Task.tsx  UserPic.tsx
(+35 files in other folders)
