[workspace]
resolver = "2"

members = [
    "lib/sqlsync-reducer",
    "lib/sqlsync-react/sqlsync-react-test-reducer"
]

[workspace.package]
authors = ["Joseph McMahon", "lightbulb443"]
edition = "2021"
homepage = "https://sqlsync.dev"
license-file = "LICENSE"
repository = "https://github.com/orbitinghail/sqlsync"

[profile.release]
lto = true
strip = "debuginfo"
codegen-units = 1

[workspace.dependencies]
anyhow = "1.0"
bincode = "1.3"
futures = "0.3"
log = "0.4"
serde = "1.0"
simple_logger = "4.1"
thiserror = "1.0"
wasmi = "0.31"